fix: use correct base z-index

--- a/framework/core/less/common/Modal.less
+++ b/framework/core/less/common/Modal.less
@@ -12,7 +12,7 @@
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: ~"calc(9999 + var(--modal-number))";
+  z-index: ~"calc(var(--zindex-modal) + var(--modal-number))";
   -webkit-overflow-scrolling: touch;
   overflow-x: hidden;
   overflow-y: auto;
